refactor GitHub Actions workflow to use actions/checkout@v2 and streamline README update process

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,6 @@
 name: Update Profile README
 
 on:
-  schedule:
-    - cron: '0 * * * *' # Runs every hour
   push:
     branches:
       - main
@@ -10,21 +8,20 @@ on:
 jobs:
   update-readme:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Update README
-        run: |
-          echo "Updating README.md"
-          echo "Last updated: $(date)" > README.md
+      # Add your steps here
 
-      - name: Commit and push changes if necessary
+      - name: Commit changes
         run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git diff --quiet && exit 0  # Exit if no changes
-          git add README.md
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git add .
           git commit -m "Update README"
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
